2048service.yml
apiVersion: v1
kind: Service
metadata:
  name: game-service
spec:
  type: NodePort
  selector:
    app: game
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30007
