gameingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingresss
    annotations:
      nginx.ingress.kubernetes.io/rewrite-target: /$1
      kubernetes.io/ingress.class: "nginx"
      cert-manager.io/cluster-issuer: "letsencrypt"
spec:
    ingressClassName: nginx
    tls:
    - hosts:
      - udays.co.in
      secretName: letsencrypt
    rules:
    - host: udays.co.in
      http:
        paths:
        - path: /game
          pathType: Prefix
          backend:
            service:
              name: game-service
              port:
                number: 80
        - path: /apache
          pathType: Prefix
          backend:
             service:
               name: apache-service
               port:
                 number: 3000
